# lighttoy

./: .gitignore  Makefile.am  README.md  configure.ac  libbulb.pc.in
cmd/: lighttoy-main.c
libbulb/: iter.h  libbulb-group.c  libbulb-light.c  libbulb-socket.c  libbulb.h  protocol.h
tests/: group-test.c
