AC_PREREQ([2.68])
AC_INIT([lighttoy], [0], [http://github.com/kaniini/lighttoy/issues])
AC_CONFIG_SRCDIR([libbulb/libbulb-group.c])
AC_CONFIG_HEADERS([libbulb/config.h])
AM_INIT_AUTOMAKE([foreign dist-xz subdir-objects])
LT_INIT

AC_SYS_LARGEFILE

AC_PROG_CPP
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
